<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/TeamScoreStyle"
                android:text="@string/team_a_score" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addThreeForTeamA"
                android:text="@string/button_a1" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addTwoForTeamA"
                android:text="@string/button_a2" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addOneForTeamA"
                android:text="@string/button_a3" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/team_margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/TeamScoreStyle"
                android:text="@string/team_b_score" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addThreeForTeamB"
                android:text="@string/button_b1" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addTwoForTeamB"
                android:text="@string/button_b2" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addOneForTeamB"
                android:text="@string/button_b3" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/reset_margin_bottom"
        android:onClick="resetScore"
        android:text="@string/button_reset"
        android:textAllCaps="true" />
</RelativeLayout>
